<resources>
    <string name="app_name">Labs20221-Gr02</string>
    <string name="personal_information_data_title">Personal Information</string>
    <string name="name_label">Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="gender_label">Gender</string>
    <string name="male_gender">Male</string>
    <string name="female_gender">Female</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="educational_level_label">Educational Level</string>
    <string-array name="educational_levels">
        <item>Elementary</item>
        <item>High School</item>
        <item>University</item>
        <item>Other</item>
    </string-array>
    <string-array name="latin_american_countries">
        <item>Colombia</item>
        <item>Venezuela</item>
        <item>Ecuador</item>
        <item>Peru</item>
        <item>Chile</item>
        <item>Bolivia</item>
        <item>Paraguay</item>
        <item>Brazil</item>
        <item>Argentina</item>
    </string-array>
    <string name="contact_information_label">Contact Information</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="country_label">Country</string>
    <string name="city_label">City</string>
    <string name="button_next">Next</string>

    <string name="dialog">Warning</string>
    <string name="messagePersonalActivity">You have to complete the name and last name information</string>
    <string name="messageContactActivity">You have to complete the contact information</string>
    <string name="messageErrorDate">You birth date is incorrect</string>
    <string name="contactInformation">Contact information:</string>
    <string name="positive">Acept</string>

</resources>